VDR Plugin 'epgsearch' Revision History
---------------------------------------

2022-01-30
new:
- Allow missing timer-Object in Recording-Done-Processing
  (vdr > 2.5.x compatibility)

2021-12-10
fixes:
- Wrong device selection for conflict check
- compareSubtitle supports more than 2 values

2021-05-24; Version 2.4.1
fixes:
- Fixed conflictcheck for encrypted channels with internal CAMs
- Fixed compiling with gcc11
- Updated deprecated calls to SetItemEvent
- Temporally(?) added #define DISABLE_TEMPLATES_COLLIDING_WITH_STL for
  compatibility with vdr 2.5.4

2021-04-12
new:
- Improved handling of remote timers
- Replace auto_ptr with unique_ptr for c++11 (kfb77@vdr-portal.de)
- Delay threads after pluginstart 10 secs (configurable)
- Changed fgets to allow compiling with clang
- Clarified "avoid repeats". Forced subtitle-comparison is named "yes" again
  New option "allow empty"
fixes:
- Fixed several lock sequence errors
- Fix utf-8 encoding in docs and manpages (kfb77 and seahawk1986@vdr-portal.de)
- Fixed possible format overflow
- Fixed displaying NAME in generated manpages thanks to etobi

2018-04-16; Version 2.4.0
new:
- Create man pages only once. by jasminj@vdr-portal.de
- Remove useless member "useEpisode" from cBlacklist by jasminj@vdr-portal.de
- Remove useless member "useEpisode" from cBlacklist by jasminj@vdr-portal.de
- Remove useless "LOCK_CHANNELS_READ" in cBlacklist run by jasminj@vdr-portal.de
- Change shell in docsrc2*.sh to /bin/bash, suggested by TomJoad@vdr-portal.de
- Added operator to cListObject derived classes by jasminj@vdr-portal.de
- Add patches/vdr.epgsearch-exttimeredit-2.3.5.diff by Dietmar Spingler <d_spingler@gmx.de>
- Adapt new makefile style of VDR 2.3.6 by TomJoad@vdr-portal.de
- Use vdr timerids instead of index by TomJoad@vdr-portal.de
- Fix many lock sequences by TomJoad@vdr-portal.de
- New vdr.epgsearch-exttimeredit-2.3.6.diff (thx to Claus Muus)